Make line wrap, add line counter and position blocks correctly

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,3 +70,20 @@ body {
   border-radius: 9px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
+
+.shiki {
+  display: block;
+  width: var(--code-block-width);
+  overflow:hidden;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  counter-reset: step;
+  counter-increment: step 0;
+  .line {
+    &::before {
+      counter-increment: step;
+      @apply mr-6 inline-block w-4 border-transparent text-right text-neutral-600 content-[counter(step)];
+    }
+  }
+}
